--- a/general.css
+++ b/general.css
@@ -10,7 +10,7 @@
     width:100%;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     height: 4rem;
 }
@@ -19,6 +19,9 @@
     margin:1rem;
 }
 
-.on_flex_left{
-    align-self:flex-start;
+.link_list{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    align-items: center;
 }
