--- a/general.css
+++ b/general.css
@@ -19,6 +19,10 @@
     margin:1rem;
 }
 
+.half_space_left{
+    margin-left:.5rem;
+}
+
 .link_list{
     display: flex;
     flex-flow: row nowrap;
