--- a/general.css
+++ b/general.css
@@ -32,3 +32,10 @@
     justify-content: flex-end;
     align-items: center;
 }
+
+.text_list{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+}
