--- a/general.css
+++ b/general.css
@@ -9,6 +9,7 @@
     position:fixed;
     overflow: hidden;
     top:0;
+    left:0;
     width:100%;
     display: flex;
     flex-flow: row nowrap;
