--- a/general.css
+++ b/general.css
@@ -63,3 +63,12 @@
     color: rgb(66,28,82);
     font-size: 18px;
 }
+
+.soft_appear{
+    animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
