--- a/general.css
+++ b/general.css
@@ -65,10 +65,14 @@
 }
 
 .soft_appear{
-    animation: fadeIn 5s;
+    animation: fadeIn 3s;
 }
 
 @keyframes fadeIn {
     0% { opacity: 0; }
     100% { opacity: 1; }
+}
+
+.main_table{
+    width: 100%;
 }
