--- a/general.css
+++ b/general.css
@@ -76,3 +76,11 @@
 .main_table{
     width: 100%;
 }
+
+.colored_row{
+    background-image: linear-gradient(to bottom right, rgb(66,28,82), rgb(255,255,255));
+}
+
+.row_height{
+    height: 400px;
+}
