--- a/general.css
+++ b/general.css
@@ -85,7 +85,6 @@
     background-image: linear-gradient(to top right, rgb(66,28,82), rgb(0,100,200));
 }
 
-
 .row_height{
     height: 400px;
 }
@@ -102,4 +101,9 @@
 
 .output_example_1{
     text-align: left;
+}
+
+.minimal_spacing{
+    margin: 2rem;
+    border: 2rem;
 }
