--- a/general.css
+++ b/general.css
@@ -41,7 +41,13 @@
 .text_list{
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.vertical_list{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
     align-items: center;
 }
 
