--- a/general.css
+++ b/general.css
@@ -1,4 +1,5 @@
 *{font-family: 'Roboto Mono', monospace;text-align: center;}
+body{width:100%;}
 
 .color_contrast_1{
     background-color:rgb(66,28,82);
