--- a/general.css
+++ b/general.css
@@ -77,7 +77,7 @@ body{width:100%;}
 }
 
 .soft_appear{
-    animation: fadeIn 3s;
+    animation: fadeIn 5s;
 }
 
 @keyframes fadeIn {
@@ -138,4 +138,8 @@ a:active {
 
 .lim_w_text{
     max-width: 410px;
+}
+
+.min_height_text{
+    min-height:15rem;
 }
