--- a/general.css
+++ b/general.css
@@ -41,19 +41,13 @@ body{width:100%;}
     border:2.5rem;
 }
 
-.link_list{
+.hor_flex{
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.text_list{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: center;
-}
 .vertical_list{
     display: flex;
     flex-flow: column wrap;
@@ -62,7 +56,7 @@ body{width:100%;}
 }
 
 .antydisconfortbar{
-    height: 5.2rem;
+    height: 4.8rem;
 }
 
 .hitting_text{
@@ -146,4 +140,8 @@ a:active {
 
 .min_height_text{
     min-height:15rem;
+}
+
+.wide_margin{
+    margin:3rem;
 }
