--- a/general.css
+++ b/general.css
@@ -1,9 +1,9 @@
 *{font-family: 'Roboto Mono', monospace;text-align: center;}
-html {
+html,body {
     width:100%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
-body{width:100%;}
 
 .color_contrast_1{
     background-color:rgb(66,28,82);
@@ -56,7 +56,7 @@ body{width:100%;}
 }
 
 .antydisconfortbar{
-    height: 4.8rem;
+    height: 4rem;
 }
 
 .hitting_text{
