--- a/general.css
+++ b/general.css
@@ -185,3 +185,8 @@ a:active {
     border-style: groove;
     border-width: .25rem;
 }
+
+.basic_display_card{
+    border-style: groove;
+    border-width: .25rem;
+}
