--- a/general.css
+++ b/general.css
@@ -179,7 +179,7 @@ a:active {
     overflow-y: scroll;
 }
 
-.input_card_1{
+.card25x14{
     width: 25rem;
     height: 14rem;
     border-style: groove;
