--- a/general.css
+++ b/general.css
@@ -192,3 +192,14 @@ a:active {
     padding: 1rem;
     margin: 1rem;
 }
+
+.yesblock{
+    width: .4rem;
+    height: .4rem;
+    background-color: rgb(0,255,0);
+}
+.noblock{
+    width: .4rem;
+    height: .4rem;
+    background-color: rgb(255,0,0);
+}
